--- a/openapi/components/schemas/check.yaml
+++ b/openapi/components/schemas/check.yaml
@@ -1,14 +1,16 @@
 type: object
 properties:
   header:
-    type: object
-    description: The header to the check. Contains details about the check as as whole, such as check number, number of seats, time opened,   
+    description: The header to the check. Contains details about the check as as whole, such as check number, number of seats, time opened, etc.
+    $ref: './header.yaml' 
   items:
-    type: list[object]  (ONE OF)
-    description: List of individual check items.    
+    type: array
+    description: List of individual check items.
+    items: 
+      $ref: './checkItem.yaml'
   totals:
-    type: object
     description: The totals at the end of the check.
+    $ref: './totals.yaml'
     
 required:
   - header
