--- a/openapi/components/schemas/checkSimulateAccrual.yaml
+++ b/openapi/components/schemas/checkSimulateAccrual.yaml
@@ -7,13 +7,18 @@ properties:
   storeCode:
     type: string
     description: A short code to uniquely identify the store where this transaction occurred.
-    example: corp
+    example: corp    
+  agentName:
+    type: string
+    description: The agent name. Used if a store has more than one POS system.
+    example: PDQ POS
   check:
     type: object
     description: POS check to post.
   cardInfo:
     type: object
     description: Card to accrue points for.
+    $ref: './cardInfo.yaml'
   autoActivateCard:
     type: boolean
     description: True if the card should automatically be activated if it is not already active. Defaults to false
@@ -28,16 +33,26 @@ properties:
     example: 0
   rewardSelectionMode:
     type: object
-    description: Identifies whether to use automatic, manual, or applicable_rewards reward selection.
+    description: Identifies whether to use automatic, manual, or applicable_rewards reward selection.    
+    $ref: './rewardSelectionMode.yaml'
   potentialUnitItems:
-    type: list[object]
+    type: array
     description:  A sequence of items which are dispensed by weight or volume and which are available to the guest. This is separate from items which have already been inserted into the check.
+    minimum: 1
+    items:
+      $ref: './potentialUnitItems.yaml'
   receiptSettings:
-    type: object array
-    description: List of receipt settings  
+    type: array
+    description: List of receipt settings
+    minimum: 1
+    items:
+      $ref: './receiptSettings.yaml'
   potentialUnitItemDiscounts:
-    type: list[object]
+    type: array
     description:  List of discounts that have been applied to potential unit items
+    minimum: 1
+    items:
+      $ref: './walletInformation.yaml'
 
 required:
   - merchantId
