--- a/openapi/components/schemas/totals.yaml
+++ b/openapi/components/schemas/totals.yaml
@@ -29,7 +29,7 @@ properties:
     description:  Total of tenders applied to the check. Typically a negative amount (reducing the check total)
     example: -5.00
   itemizedTotals:
-    type: list[object] (ONE OF)
+    type: list[object]
     description:  Can be empty. Additional POS-specific itemized totals, such as totals by reporting group or similar. Defaults to empty.
 
 required:
