--- a/openapi/components/schemas/modifier.yaml
+++ b/openapi/components/schemas/modifier.yaml
@@ -19,18 +19,24 @@ properties:
   quantity:
     type: decimal
     description: Quantity of the menu item purchased. Typically "1". Defaults to 1.
-    example: 12.00
+    default: 1.00
+    example: 1.00
   categories:
     type: array
     description: Can be empty. Any categories the menu item is associated with. Defaults to empty.
+    default: []
     example: [{"categoryType": "major", "id": "-1"}]
+    items:
+      $ref: './category.yaml'    
   isVoided:
     type: boolean
     description: True if the menu item is voided or removed from the check and does not affect the check total, nor was purchased or returned. Defaults to false.
+    default: false
     example: True
   isTaxable:
     type: boolean
     description: True if the menu item is a taxable item which contributed to the tax total. Defaults to true.
+    default: true
     example: True
   price:
     type: decimal
@@ -43,10 +49,13 @@ properties:
   discounts:
     type: array
     description: Can be empty. A list of any discounts that apply to the single menu item only, applicable for instance if a coupon has been applied. Defaults to empty.
-    example: []
+    default: []
+    items:
+      $ref: './discountItem.yaml'
   consumedQuantity:
     type: decimal
     description: Consumed quantity of the menu item. Defaults to 0.
+    default: 0
     example: 0
     
 required:
