--- a/openapi/components/schemas/comboItem.yaml
+++ b/openapi/components/schemas/comboItem.yaml
@@ -23,19 +23,24 @@ properties:
   quantity:
     type: decimal
     description: Quantity of the combo item purchased. Typically "1". Defaults to 1.
+    default: 1.00
     example: 12.00
   categories:
     type: array
     description: Can be empty. Any categories the combo item is associated with. Defaults to empty.
-    example: [{"categoryType": "major", "id": "-1"}]
+    default: []    
+    items:
+      $ref: '.\category.yaml'
   isVoided:
     type: boolean
     description: True if the combo item is voided or removed from the check and does not affect the check total, nor was purchased or returned. Defaults to false.
-    example: True
+    default: false
+    example: false
   isTaxable:
     type: boolean
     description: True if the combo item is a taxable item which contributed to the tax total. Defaults to true.
-    example: True
+    default: true
+    example: true
   price:
     type: decimal
     description: Price of the combo item. Typically a positive amount, unless voided. Should be calculated as unit price * quantity. This should not include the prices of the modifiers.
@@ -47,17 +52,24 @@ properties:
   modifiers:
     type: array
     description: Can be empty. A list of any modifiers (such as condiments) attached to the combo item. Defaults to empty.
-    example: []
+    default: []    
+    items:
+      $ref: '.\modifier.yaml'
   discounts:
     type: array
     description: Can be empty. A list of any discounts that apply to the single combo item only, applicable for instance if a coupon has been applied. Defaults to empty.
-    example: []
+    default: []    
+    items:
+      $ref: '.\discountItem.yaml'
   items:
     type: array
     description: List of menu items to be included in the combo.  
+    items:
+      $ref: '.\menuItem.yaml'
   consumedQuantity:
     type: decimal
     description: Consumed quantity of the combo item. Defaults to 0.
+    default: 0
     example: 0
 
 required:
