--- a/openapi/components/schemas/serviceChargeItem.yaml
+++ b/openapi/components/schemas/serviceChargeItem.yaml
@@ -23,15 +23,18 @@ properties:
   quantity:
     type: decimal
     description: Quantity of the service charge item purchased. Typically "1". Defaults to 1.
+    default: 1.00
     example: 12.00
   isVoided:
     type: boolean
     description: True if the service charge item is voided or removed from the check and does not affect the check total, nor was purchased or returned. Defaults to false.
-    example: True
+    default: false
+    example: false
   isTaxable:
     type: boolean
     description: True if the service charge item is a taxable item which contributed to the tax total. Defaults to true.
-    example: True
+    default: true
+    example: true
   price:
     type: decimal
     description: Price of the service charge item. Typically a positive amount, unless voided. Should be calculated as unit price * quantity. This should not include the prices of the modifiers.
@@ -43,10 +46,13 @@ properties:
   discounts:
     type: array
     description: Can be empty. A list of any discounts that apply to the single service charge item only, applicable for instance if a coupon has been applied. Defaults to empty.
-    example: []
+    default: []    
+    items:
+      $ref: '.\discountItem.yaml'
   consumedQuantity:
     type: decimal
     description: Consumed quantity of the service charge item. Defaults to 0.
+    default: 0
     example: 0
 
 required:
