--- a/openapi/components/schemas/tenderItem.yaml
+++ b/openapi/components/schemas/tenderItem.yaml
@@ -25,9 +25,18 @@ properties:
     description: Amount of the tender. Typically a negative amount (reducing the check total). Can be 0, such as in the case of loyalty cards that are not being used as comp cards.
     example: -12.00
   detail:
-    type: array
+    type: object
     description: Not present if a cash tender or not one of the available types (credit card, gift card, or loyalty card). Gives additional detail about the tender. Available types are Credit card, Gift card, Loyalty card.
-    
+    oneOf:
+      - $ref: './creditCardTenderItem.yaml'
+      - $ref: './giftCard.yaml'
+      - $ref: './loyaltyCardTenderItem.yaml'
+    discriminator:
+      propertyName: type
+      mapping:
+        creditCard: './creditCardTenderItem.yaml'
+        giftCard: './giftCard.yaml'
+        loyaltyCard: './loyaltyCardTenderItem.yaml'
 required:
   - type
   - itemId
